fix: resolve issue with content overflow

--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -426,13 +426,13 @@ footer .sponsors p + ul {
 /* Typography */
 
 h1 {
-    font-size: 3.75rem;
+    font-size: 2.5rem;
     line-height: 1.5;
 }
 
 h2 {
     color: var(--color-red-800);
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: 700;
     margin-block: 5rem 2.8125rem;
 }
@@ -844,6 +844,7 @@ button:focus {
 
 [data-pagination-navigation] ul {
     display: flex;
+    flex-wrap: wrap;
     gap: 1rem;
     justify-content: center;
     margin-block-start: 8.25rem;
@@ -863,6 +864,10 @@ button:focus {
 }
 
 @media (width >= 72rem) {
+    h1 {
+        font-size: 3.75rem;
+    }
+
     h2 {
         font-size: 3rem;
     }
